tests/errors/examples/chained_type_error.vg
<view name="test">
  <div>{count | numberToString | numberToString}</div>
</view>
